Create service worker lifecycle

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
           .register("./service-worker.js")
-          .then(() => console.log("Service Worker registered sucessfully"))
+          .then(() => console.log("Service Worker registered sucessfully."))
           .catch((error) =>
             console.log("Service Worker registration failed:", error)
           );
